# HERE_SPIT_HACKATHON_2025

./: README.md
Pixel Pioneers/: Final_iteration.ipynb  HereCode.ipynb
Team Bit Please/: README.md  requirements.txt
Team Bit Please/detection algo/: kd_tree.ipynb  oct_tree.ipynb
Team Bit Please/relocation/: dummyData.ipynb  preprocessing.ipynb  reloc.ipynb
Team_Caffeine_JS_Nirmitee/: Data_AnomalyDetection_HereHack.ipynb  README.md  Segmentation_Here_Hackathon.ipynb
Team_Caffeine_JS_Nirmitee/client/: .env  .prettierignore  .prettierrc  package-lock.json  package.json  tailwind.config.js
team-CodeBlooded/: .gitignore  README.md  algo.py  requirements.txt
team-HereCoders/: README.md  app.json  package-lock.json  package.json
team-HereCoders/components/: HereMap.tsx
team-HereCoders/constants/: clerkConfig.ts
team-HereCoders/hooks/: useUserLocation.ts
team-The-Hawks/backend/: main.py
team-ZenithX/: Readme.md
team-ZenithX/backend/: .env  .env.example  README.md  package-lock.json  package.json
team-adya_werehere/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
team-adya_werehere/backend/: backend.http  config.py  es.py  main.py  models.py  pyproject.toml  requirements.txt
team-adya_werehere/backend/scripts/: get_geocoding.py  ingest_data.py  modify_data.py
team-adya_werehere/data/: restaurant_review.json
team-adya_werehere/src/: App.jsx  index.css
team-alpha/: README.md
team-beta/: README.md
team-fsociety/: package-lock.json  package.json
team-fsociety/src/: App.css  App.jsx
team-gamma/: README.md
(+174 files in other folders)
