[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "elasticsearch>=9.0.1",
    "fastapi[standard]>=0.115.12",
    "opencage>=3.1.0",
    "pydantic>=2.11.5",
    "tqdm>=4.67.1",
]

[tool.pyright]
typeCheckingMode = "standard"
